[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "pylaborate-basalt"
description = "Pylaborate Project tools"
authors = [
    { name = "Sean Champ", email = "spchamp@users.noreply.github.com" },
]
readme = "README.md"
license = { file = "COPYING" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    ## testing
    "Private :: Do not Upload",
]
version = "1.0.0"
dependencies = ["paver"]
requires-python = ">= 3.6"

[project.urls]
Home = "https://example.com/fixme-not-a-real-homepage"

[project.optional-dependencies]
dev = [
    "ipython",
    "pip-tools",
    "pytest",
    "black",
    "pydocstyle",
    "mypy",
    "flake8",
    "pdoc3"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
include = ["pylaborate.basalt", "pylaborate.libpy_staging"]

[tool.pytest.ini_options]
testpaths = ["tests"]
