[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pylaborate-basalt"
description = "Pylaborate Project tools"
authors = [
    { name = "Sean Champ", email = "spchamp@users.noreply.github.com" },
]
readme = "README.md"
license = { file = "COPYING" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    ## testing
    "Private :: Do not Upload",
]
version = "1.0.1"
dependencies = ["paver >= 1.3.4"]
## not compatible with Jython 2.7.*
## TBD test with Python 3.6 in openSUSE Leap 15.5
requires-python = ">= 3.6"

[project.urls]
Home = "https://github.com/pylaborate/basalt"

[project.optional-dependencies]
dev = [
    "python-rapidjson",
    "shellous",
    "ipython",
    "pip-tools",
    "pytest",
    "black",
    "pydocstyle",
    "flake8",
    "pdoc3",
    "jinja2 >= 3.0",
    "tomlkit"
]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true
include = ["pylaborate.basalt", "pylaborate.common_staging"]

[tool.pytest.ini_options]
testpaths = ["tests"]
